<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mycompany</groupId>
	<artifactId>StudentAttendanceMS</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<exec.mainClass>com.mycompany.studentattendancems_3.StudentAttendanceMS_3</exec.mainClass>
	</properties>
	<dependencies>
		<!-- MYSQL Connector -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.33</version>
		</dependency>
		<!-- Calendar -->
		<dependency>
			<groupId>com.toedter</groupId>
			<artifactId>jcalendar</artifactId>
			<version>1.4</version>
		</dependency>
		<!-- JasperReports Library -->
   		<dependency>
        		<groupId>net.sf.jasperreports</groupId>
        		<artifactId>jasperreports</artifactId>
        		<version>7.0.1</version> <!-- Replace with the version you need -->
	    	</dependency>	
	    	<!-- JasperReports Fonts -->
    		<dependency>
        		<groupId>net.sf.jasperreports</groupId>
        		<artifactId>jasperreports-fonts</artifactId>
        		<version>7.0.1</version> <!-- Replace with the version you need -->
    		</dependency>
	    	<!-- JasperReports JavaFlow -->
	   	<dependency>
	        	<groupId>net.sf.jasperreports</groupId>
        		<artifactId>jasperreports-javaflow</artifactId>
        		<version>7.0.1</version> <!-- Replace with the version you need -->
    		</dependency>
	</dependencies>
    <name>StudentAttendanceMS</name>
</project>